tests/NormalTests/paczka1/fuzzy1/38828959.err
Error in line 7: QsUEUXYah A69 66,99
Error in line 4: 0NPHM A798 47,0
Error in line 20: A798 A537 11,7
Error in line 25: A798 A644 22,1
Error in line 26: A798 A69 1,3
Error in line 29: A798 A644 90,6
